--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -189,10 +189,6 @@ a {
   color: black;
 }
 
-.img_placeholder {
-  background-image: url("../../public/img/placeholder-colored.png");
-}
-
 /* filter effect will only be applied on non-touch screens */
 @media (hover: hover) and (pointer: fine) {
   .gradient-effect-parent {
@@ -203,6 +199,7 @@ a {
     opacity: 50%;
     transition: 0.5s;
     filter: contrast(2);
+    border-radius: inherit;
   }
   .gradient-effect-parent:hover .gradient-effect-child {
     background-color: transparent;
