fixing glow background & footer padding

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -75,6 +75,13 @@ a {
   -o-background-clip: text;
 }
 
+.background-glow {
+  background-image: url("../../public/img/glow.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
 /* hover effect on navbar links */
 
 .nav-link {
