--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -102,6 +102,7 @@ a {
   background-image: linear-gradient(180deg, rgba(67, 42, 217, 1) 0%, rgba(132, 98, 246, 1) 79%);
   z-index: 1;
   transition: all 0.3s ease-in-out;
+  border-radius: 16px;
 }
 
 .background-gradient-card::before {
@@ -115,10 +116,12 @@ a {
   z-index: -1;
   transition: opacity 0.3s ease-in-out;
   opacity: 0;
+  border-radius: 16px;
 }
 
 .background-gradient-card:hover::before {
   opacity: 1;
+  border-radius: 16px;
 }
 
 .background-gradient-card:hover h6,
@@ -328,4 +331,8 @@ a {
 /* applies to rocket image */
 .drop-shadow {
   filter: drop-shadow(0px 3px 32px #8462f6);
+}
+
+.rocket-container {
+  overflow: visible !important;
 }
