fixing mobile menu items' font-weight

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,6 +44,10 @@ a {
   font-family: "Gotham light";
 }
 
+.MuiAccordionSummary-content {
+  font-family: "Gotham light";
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
