--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -322,3 +322,16 @@ a {
   margin-right: -30px;
   overflow: visible !important;
 }
+
+@keyframes rocketAnimation {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-30px);
+  }
+}
+
+.animate-rocket {
+  animation: rocketAnimation 2s infinite alternate;
+}
